src/components/productsList/productslist.css
.products-list {
  min-height: 100vh;
  padding-bottom: 40px;
  margin-top: 50px;
}
.products-title {
  font-size: 40px;
  font-weight: 600;
  text-align: center;
  margin-bottom: 40px;
  overflow: hidden;
  font-family: "Crimson Text", serif;
  letter-spacing: 5px;
}
.projects {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 20px;
  width: 100%;
}

/* @media screen and (max-width: ) {
} */
@media screen and (max-width: 1024px) {
  .products-list {
    /* height: 100%; */
    margin-top: 100px;
    /* padding-bottom: 40px; */
  }
}
@media screen and (max-width: 425px) {
  .projects {
    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
  }
  .products-title {
    font-size: 25px;
  }
}
@media screen and (max-width: 375px) {
  .projects {
    grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
  }
}

